# virtual_app_droid

./: ARQUITECTURA.md  DAEMONS_DOCUMENTACION.md  FASE_1_HIPERVISORES_DOCUMENTACION.md  FASE_A_DOCUMENTACION.md  FASE_B_DOCUMENTACION.md  FASE_C_DOCUMENTACION.md  FASE_D_DOCUMENTACION.md  FASE_E2E_PRUEBAS_INTEGRACION_DOCUMENTACION.md  FASE_E_DOCUMENTACION.md  FASE_F_SEGURIDAD_POST_CUANTICA_DOCUMENTACION.md  PROMPTS_MEJORAS_SEGURIDAD_ESCALABILIDAD.md  README.md  ROADMAP_MULTIPLATFORM.md  debug.keystore.base64  metadata.json  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: EndToEndDaemonIntegrationTest.kt  GreetingScreenshotTest.kt  MockMultiplatformDaemonServer.kt
daemons/: package.sh
daemons/linux/: install.sh  uninstall.sh  vault-host.service  vault-runtime.service
daemons/macos/: com.example.vault-host.plist  com.example.vault-runtime.plist  install.sh  uninstall.sh
daemons/windows/: setup.ps1  uninstall.ps1
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/crates/vault-core/: Cargo.toml
rust/crates/vault-core/src/: enrollment.rs  lib.rs  rate_limit.rs  services.rs  traits.rs
rust/crates/vault-crypto/: Cargo.toml
rust/crates/vault-crypto/src/: handshake.rs  keys.rs  lib.rs  pairing.rs  wire.rs
rust/crates/vault-linux/: Cargo.toml
rust/crates/vault-linux/src/: enrollment_http.rs  hypervisor.rs  lib.rs  lifecycle.rs  secret_store.rs  storage.rs
rust/crates/vault-macos/: Cargo.toml
rust/crates/vault-macos/src/: hypervisor.rs  lib.rs  secret_store.rs  storage.rs
rust/crates/vault-protocol/: Cargo.toml
rust/crates/vault-protocol/src/: enrollment.rs  framing.rs  lib.rs  services.rs
rust/crates/vault-stream/: Cargo.toml
rust/crates/vault-stream/src/: audio.rs  input.rs  lib.rs  video.rs
rust/crates/vault-windows/: Cargo.toml
rust/crates/vault-windows/src/: hypervisor.rs  lib.rs  secret_store.rs  service_manager.rs  storage.rs
