[workspace]
resolver = "2"
members = [
    "crates/vault-protocol",
    "crates/vault-crypto",
    "crates/vault-core",
    "crates/vault-stream",
    "crates/vault-linux",
    "crates/vault-windows",
    "crates/vault-macos",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
snow = "0.9"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
anyhow = "1"
